// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CircleIcon renders correctly when given svgData 1`] = `
<styled.div
  theme={
    Object {
      "backgroundDanger": "#ec5659",
      "backgroundDangerDisabled": "#e2e8ea",
      "backgroundDangerHover": "#e62a2a",
      "backgroundInput": "#ffffff",
      "backgroundPrimary": "#50a5e7",
      "backgroundPrimaryDisabled": "#e2e8ea",
      "backgroundPrimaryHover": "#4793cd",
      "backgroundSecondary": "#ffffff",
      "backgroundSecondaryDisabled": "#ffffff",
      "backgroundSecondaryHover": "#ffffff",
      "textBody": "#3f484b",
      "textDanger": "#ffffff",
      "textDangerDisabled": "#c3cbcf",
      "textDangerHover": "#ffffff",
      "textHeading": "#3f484b",
      "textIcon": "#ffffff",
      "textIconInvert": "#1b2224",
      "textInput": "#3f484b",
      "textInputFocus": "#a2abaf",
      "textInputInvalid": "#e62a2a",
      "textInputPlaceholder": "#a2abaf",
      "textPrimary": "#3f484b",
      "textPrimaryDisabled": "#a2abaf",
      "textPrimaryHover": "#ffffff",
      "textPrimaryInvert": "#ffffff",
      "textSecondary": "#3f484b",
      "textSecondaryDisabled": "#c3cbcf",
      "textSecondaryHover": "#ffffff",
      "textSubtitle": "#a2abaf",
    }
  }
>
  <SVGIcon
    invert={true}
    size="xsmall"
    svgData={<g />}
    theme={
      Object {
        "backgroundDanger": "#ec5659",
        "backgroundDangerDisabled": "#e2e8ea",
        "backgroundDangerHover": "#e62a2a",
        "backgroundInput": "#ffffff",
        "backgroundPrimary": "#50a5e7",
        "backgroundPrimaryDisabled": "#e2e8ea",
        "backgroundPrimaryHover": "#4793cd",
        "backgroundSecondary": "#ffffff",
        "backgroundSecondaryDisabled": "#ffffff",
        "backgroundSecondaryHover": "#ffffff",
        "textBody": "#3f484b",
        "textDanger": "#ffffff",
        "textDangerDisabled": "#c3cbcf",
        "textDangerHover": "#ffffff",
        "textHeading": "#3f484b",
        "textIcon": "#ffffff",
        "textIconInvert": "#1b2224",
        "textInput": "#3f484b",
        "textInputFocus": "#a2abaf",
        "textInputInvalid": "#e62a2a",
        "textInputPlaceholder": "#a2abaf",
        "textPrimary": "#3f484b",
        "textPrimaryDisabled": "#a2abaf",
        "textPrimaryHover": "#ffffff",
        "textPrimaryInvert": "#ffffff",
        "textSecondary": "#3f484b",
        "textSecondaryDisabled": "#c3cbcf",
        "textSecondaryHover": "#ffffff",
        "textSubtitle": "#a2abaf",
      }
    }
    top={8}
  />
</styled.div>
`;

exports[`CircleIcon renders correctly with undefined size attribute 1`] = `
<styled.div
  theme={
    Object {
      "backgroundDanger": "#ec5659",
      "backgroundDangerDisabled": "#e2e8ea",
      "backgroundDangerHover": "#e62a2a",
      "backgroundInput": "#ffffff",
      "backgroundPrimary": "#50a5e7",
      "backgroundPrimaryDisabled": "#e2e8ea",
      "backgroundPrimaryHover": "#4793cd",
      "backgroundSecondary": "#ffffff",
      "backgroundSecondaryDisabled": "#ffffff",
      "backgroundSecondaryHover": "#ffffff",
      "textBody": "#3f484b",
      "textDanger": "#ffffff",
      "textDangerDisabled": "#c3cbcf",
      "textDangerHover": "#ffffff",
      "textHeading": "#3f484b",
      "textIcon": "#ffffff",
      "textIconInvert": "#1b2224",
      "textInput": "#3f484b",
      "textInputFocus": "#a2abaf",
      "textInputInvalid": "#e62a2a",
      "textInputPlaceholder": "#a2abaf",
      "textPrimary": "#3f484b",
      "textPrimaryDisabled": "#a2abaf",
      "textPrimaryHover": "#ffffff",
      "textPrimaryInvert": "#ffffff",
      "textSecondary": "#3f484b",
      "textSecondaryDisabled": "#c3cbcf",
      "textSecondaryHover": "#ffffff",
      "textSubtitle": "#a2abaf",
    }
  }
>
  <SVGIcon
    invert={true}
    size="xsmall"
    svgData={
      <svg
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fillRule="evenodd"
          transform="translate(1 1)"
        >
          <path
            d="M7 5.77L12.77 0 14 1.23 8.23 7 14 12.77 12.77 14 7 8.23 1.23 14 0 12.77 5.77 7 0 1.23 1.23 0 7 5.77z"
          />
        </g>
      </svg>
    }
    theme={
      Object {
        "backgroundDanger": "#ec5659",
        "backgroundDangerDisabled": "#e2e8ea",
        "backgroundDangerHover": "#e62a2a",
        "backgroundInput": "#ffffff",
        "backgroundPrimary": "#50a5e7",
        "backgroundPrimaryDisabled": "#e2e8ea",
        "backgroundPrimaryHover": "#4793cd",
        "backgroundSecondary": "#ffffff",
        "backgroundSecondaryDisabled": "#ffffff",
        "backgroundSecondaryHover": "#ffffff",
        "textBody": "#3f484b",
        "textDanger": "#ffffff",
        "textDangerDisabled": "#c3cbcf",
        "textDangerHover": "#ffffff",
        "textHeading": "#3f484b",
        "textIcon": "#ffffff",
        "textIconInvert": "#1b2224",
        "textInput": "#3f484b",
        "textInputFocus": "#a2abaf",
        "textInputInvalid": "#e62a2a",
        "textInputPlaceholder": "#a2abaf",
        "textPrimary": "#3f484b",
        "textPrimaryDisabled": "#a2abaf",
        "textPrimaryHover": "#ffffff",
        "textPrimaryInvert": "#ffffff",
        "textSecondary": "#3f484b",
        "textSecondaryDisabled": "#c3cbcf",
        "textSecondaryHover": "#ffffff",
        "textSubtitle": "#a2abaf",
      }
    }
    top={8}
  />
</styled.div>
`;

exports[`CircleIcon renders correctly with valid size 1`] = `
<styled.div
  large={true}
  theme={
    Object {
      "backgroundDanger": "#ec5659",
      "backgroundDangerDisabled": "#e2e8ea",
      "backgroundDangerHover": "#e62a2a",
      "backgroundInput": "#ffffff",
      "backgroundPrimary": "#50a5e7",
      "backgroundPrimaryDisabled": "#e2e8ea",
      "backgroundPrimaryHover": "#4793cd",
      "backgroundSecondary": "#ffffff",
      "backgroundSecondaryDisabled": "#ffffff",
      "backgroundSecondaryHover": "#ffffff",
      "textBody": "#3f484b",
      "textDanger": "#ffffff",
      "textDangerDisabled": "#c3cbcf",
      "textDangerHover": "#ffffff",
      "textHeading": "#3f484b",
      "textIcon": "#ffffff",
      "textIconInvert": "#1b2224",
      "textInput": "#3f484b",
      "textInputFocus": "#a2abaf",
      "textInputInvalid": "#e62a2a",
      "textInputPlaceholder": "#a2abaf",
      "textPrimary": "#3f484b",
      "textPrimaryDisabled": "#a2abaf",
      "textPrimaryHover": "#ffffff",
      "textPrimaryInvert": "#ffffff",
      "textSecondary": "#3f484b",
      "textSecondaryDisabled": "#c3cbcf",
      "textSecondaryHover": "#ffffff",
      "textSubtitle": "#a2abaf",
    }
  }
>
  <SVGIcon
    invert={true}
    size="medium"
    svgData={
      <svg
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fillRule="evenodd"
          transform="translate(1 1)"
        >
          <path
            d="M7 5.77L12.77 0 14 1.23 8.23 7 14 12.77 12.77 14 7 8.23 1.23 14 0 12.77 5.77 7 0 1.23 1.23 0 7 5.77z"
          />
        </g>
      </svg>
    }
    theme={
      Object {
        "backgroundDanger": "#ec5659",
        "backgroundDangerDisabled": "#e2e8ea",
        "backgroundDangerHover": "#e62a2a",
        "backgroundInput": "#ffffff",
        "backgroundPrimary": "#50a5e7",
        "backgroundPrimaryDisabled": "#e2e8ea",
        "backgroundPrimaryHover": "#4793cd",
        "backgroundSecondary": "#ffffff",
        "backgroundSecondaryDisabled": "#ffffff",
        "backgroundSecondaryHover": "#ffffff",
        "textBody": "#3f484b",
        "textDanger": "#ffffff",
        "textDangerDisabled": "#c3cbcf",
        "textDangerHover": "#ffffff",
        "textHeading": "#3f484b",
        "textIcon": "#ffffff",
        "textIconInvert": "#1b2224",
        "textInput": "#3f484b",
        "textInputFocus": "#a2abaf",
        "textInputInvalid": "#e62a2a",
        "textInputPlaceholder": "#a2abaf",
        "textPrimary": "#3f484b",
        "textPrimaryDisabled": "#a2abaf",
        "textPrimaryHover": "#ffffff",
        "textPrimaryInvert": "#ffffff",
        "textSecondary": "#3f484b",
        "textSecondaryDisabled": "#c3cbcf",
        "textSecondaryHover": "#ffffff",
        "textSubtitle": "#a2abaf",
      }
    }
    top={12}
  />
</styled.div>
`;

exports[`CircleIcon renders correctly with valid size 2`] = `
<styled.div
  medium={true}
  theme={
    Object {
      "backgroundDanger": "#ec5659",
      "backgroundDangerDisabled": "#e2e8ea",
      "backgroundDangerHover": "#e62a2a",
      "backgroundInput": "#ffffff",
      "backgroundPrimary": "#50a5e7",
      "backgroundPrimaryDisabled": "#e2e8ea",
      "backgroundPrimaryHover": "#4793cd",
      "backgroundSecondary": "#ffffff",
      "backgroundSecondaryDisabled": "#ffffff",
      "backgroundSecondaryHover": "#ffffff",
      "textBody": "#3f484b",
      "textDanger": "#ffffff",
      "textDangerDisabled": "#c3cbcf",
      "textDangerHover": "#ffffff",
      "textHeading": "#3f484b",
      "textIcon": "#ffffff",
      "textIconInvert": "#1b2224",
      "textInput": "#3f484b",
      "textInputFocus": "#a2abaf",
      "textInputInvalid": "#e62a2a",
      "textInputPlaceholder": "#a2abaf",
      "textPrimary": "#3f484b",
      "textPrimaryDisabled": "#a2abaf",
      "textPrimaryHover": "#ffffff",
      "textPrimaryInvert": "#ffffff",
      "textSecondary": "#3f484b",
      "textSecondaryDisabled": "#c3cbcf",
      "textSecondaryHover": "#ffffff",
      "textSubtitle": "#a2abaf",
    }
  }
>
  <SVGIcon
    invert={true}
    size="small"
    svgData={
      <svg
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fillRule="evenodd"
          transform="translate(1 1)"
        >
          <path
            d="M7 5.77L12.77 0 14 1.23 8.23 7 14 12.77 12.77 14 7 8.23 1.23 14 0 12.77 5.77 7 0 1.23 1.23 0 7 5.77z"
          />
        </g>
      </svg>
    }
    theme={
      Object {
        "backgroundDanger": "#ec5659",
        "backgroundDangerDisabled": "#e2e8ea",
        "backgroundDangerHover": "#e62a2a",
        "backgroundInput": "#ffffff",
        "backgroundPrimary": "#50a5e7",
        "backgroundPrimaryDisabled": "#e2e8ea",
        "backgroundPrimaryHover": "#4793cd",
        "backgroundSecondary": "#ffffff",
        "backgroundSecondaryDisabled": "#ffffff",
        "backgroundSecondaryHover": "#ffffff",
        "textBody": "#3f484b",
        "textDanger": "#ffffff",
        "textDangerDisabled": "#c3cbcf",
        "textDangerHover": "#ffffff",
        "textHeading": "#3f484b",
        "textIcon": "#ffffff",
        "textIconInvert": "#1b2224",
        "textInput": "#3f484b",
        "textInputFocus": "#a2abaf",
        "textInputInvalid": "#e62a2a",
        "textInputPlaceholder": "#a2abaf",
        "textPrimary": "#3f484b",
        "textPrimaryDisabled": "#a2abaf",
        "textPrimaryHover": "#ffffff",
        "textPrimaryInvert": "#ffffff",
        "textSecondary": "#3f484b",
        "textSecondaryDisabled": "#c3cbcf",
        "textSecondaryHover": "#ffffff",
        "textSubtitle": "#a2abaf",
      }
    }
    top={12}
  />
</styled.div>
`;

exports[`CircleIcon renders correctly with valid size 3`] = `
<styled.div
  small={true}
  theme={
    Object {
      "backgroundDanger": "#ec5659",
      "backgroundDangerDisabled": "#e2e8ea",
      "backgroundDangerHover": "#e62a2a",
      "backgroundInput": "#ffffff",
      "backgroundPrimary": "#50a5e7",
      "backgroundPrimaryDisabled": "#e2e8ea",
      "backgroundPrimaryHover": "#4793cd",
      "backgroundSecondary": "#ffffff",
      "backgroundSecondaryDisabled": "#ffffff",
      "backgroundSecondaryHover": "#ffffff",
      "textBody": "#3f484b",
      "textDanger": "#ffffff",
      "textDangerDisabled": "#c3cbcf",
      "textDangerHover": "#ffffff",
      "textHeading": "#3f484b",
      "textIcon": "#ffffff",
      "textIconInvert": "#1b2224",
      "textInput": "#3f484b",
      "textInputFocus": "#a2abaf",
      "textInputInvalid": "#e62a2a",
      "textInputPlaceholder": "#a2abaf",
      "textPrimary": "#3f484b",
      "textPrimaryDisabled": "#a2abaf",
      "textPrimaryHover": "#ffffff",
      "textPrimaryInvert": "#ffffff",
      "textSecondary": "#3f484b",
      "textSecondaryDisabled": "#c3cbcf",
      "textSecondaryHover": "#ffffff",
      "textSubtitle": "#a2abaf",
    }
  }
>
  <SVGIcon
    invert={true}
    size="xsmall"
    svgData={
      <svg
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fillRule="evenodd"
          transform="translate(1 1)"
        >
          <path
            d="M7 5.77L12.77 0 14 1.23 8.23 7 14 12.77 12.77 14 7 8.23 1.23 14 0 12.77 5.77 7 0 1.23 1.23 0 7 5.77z"
          />
        </g>
      </svg>
    }
    theme={
      Object {
        "backgroundDanger": "#ec5659",
        "backgroundDangerDisabled": "#e2e8ea",
        "backgroundDangerHover": "#e62a2a",
        "backgroundInput": "#ffffff",
        "backgroundPrimary": "#50a5e7",
        "backgroundPrimaryDisabled": "#e2e8ea",
        "backgroundPrimaryHover": "#4793cd",
        "backgroundSecondary": "#ffffff",
        "backgroundSecondaryDisabled": "#ffffff",
        "backgroundSecondaryHover": "#ffffff",
        "textBody": "#3f484b",
        "textDanger": "#ffffff",
        "textDangerDisabled": "#c3cbcf",
        "textDangerHover": "#ffffff",
        "textHeading": "#3f484b",
        "textIcon": "#ffffff",
        "textIconInvert": "#1b2224",
        "textInput": "#3f484b",
        "textInputFocus": "#a2abaf",
        "textInputInvalid": "#e62a2a",
        "textInputPlaceholder": "#a2abaf",
        "textPrimary": "#3f484b",
        "textPrimaryDisabled": "#a2abaf",
        "textPrimaryHover": "#ffffff",
        "textPrimaryInvert": "#ffffff",
        "textSecondary": "#3f484b",
        "textSecondaryDisabled": "#c3cbcf",
        "textSecondaryHover": "#ffffff",
        "textSubtitle": "#a2abaf",
      }
    }
    top={8}
  />
</styled.div>
`;

exports[`CircleIcon renders nothing with invalid name 1`] = `""`;
